feat: mean purchases per category and sub categroy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,10 @@ services:
     ports:
       - '5000:5000'
     container_name: app
+    volumes:
+      - type: bind
+        source: ./analysis
+        target: /usr/src/analysis
     networks:
       - spark
     depends_on:
